--- a/data/css/register.css
+++ b/data/css/register.css
@@ -110,7 +110,8 @@ body{
 
 .container__register-section--footer {
     color: #383838;    
-    /* margin-top: 10px; */
+     margin-top: 10px;
+     margin-bottom: 20px;
 }
 
 .container__register-section--footer a{
