--- a/data/css/main.css
+++ b/data/css/main.css
@@ -247,8 +247,117 @@ padding-left: 30px;
         justify-content: center;
     }
 
+    .modal-content{
+        width: 75%;
+    }
+
 
 }
 
 
+
+/* Modal Background */
+.modal {
+    display: none; /* Domyślnie ukryty */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Tło modalne */
+    z-index: 1; /* Przykrywa inne elementy */
+    justify-content: center;
+    align-items: center;
+}
+
+/* Modal Content */
+.modal-content {
+    display: flex;
+    /*height: 300px;*/
+    width: 25%;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+
+
+    height: auto;
+    padding: 20px;
+}
+
+.add-cateogry{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-content__info{
+    height: 70px;
+    font-size: 1.3em;
+    width: 80%;
+    background-color: rgb(202, 52, 52);
+    color: white;
+    border-radius: 5px;
+    margin-bottom: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.modal-content__form-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+}
+
+.modal-content__close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+}
+
+.modal-content__form-section-input{
+    width: 100%;
+    box-sizing: border-box; /*TODO DODAC W LOGOWANIU REGISTER WTEDY NIE TRZEBA DAWAC WIDH 91 92 %*/
+    border: 0.005px solid #d4d4d4;
+    background-color: white;
+    font-size: 1.3em;
+    height: 50px;
+    border-radius: 5px;
+    margin: 4px;
+    padding-left: 15px;
+}
+
+
+.modal-content__form-section-button{
+    font-size: 1em;
+    font-weight: bold;
+    color: white;
+    background-color: #00c16e;
+    border: none;
+    height: 50px;
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 4px;
+    margin-bottom: 20px;
+
+}
+
+
+/* Disable scrolling when modal is open */
+body.modal-open {
+    overflow: hidden;
+}
 
