--- a/data/css/main.css
+++ b/data/css/main.css
@@ -292,7 +292,7 @@ padding-left: 30px;
     padding: 20px;
 }
 
-.add-cateogry, .edit-category{
+.add-cateogry, .edit-category, .add-client, edit-client{
     width: 100%;
     display: flex;
     align-items: center;
@@ -344,6 +344,13 @@ padding-left: 30px;
     padding-left: 15px;
 }
 
+.modal-content__form-section-select{
+    width: 100%;
+    box-sizing: border-box;
+    height: 52px;
+    /*width: 394px;*/
+    color: #383838;
+}
 
 .modal-content__form-section-button{
     font-size: 1em;
