--- a/data/css/main.css
+++ b/data/css/main.css
@@ -292,7 +292,7 @@ padding-left: 30px;
     padding: 20px;
 }
 
-.add-cateogry, .edit-category, .add-client, edit-client{
+.add-cateogry, .edit-category, .add-client, edit-client, .add-product, .edit-product{
     width: 100%;
     display: flex;
     align-items: center;
