--- a/data/css/main.css
+++ b/data/css/main.css
@@ -344,6 +344,40 @@ padding-left: 30px;
     padding-left: 15px;
 }
 
+.modal-content__form-section-input--autocomplete-box{
+    width: 100%;
+}
+.modal-content__form-section-input--autocomplete{
+    margin: 0;
+    position: relative;
+}
+/* Lista wyników autouzupełniania */
+.form-section-input--autocomplete__list {
+    position: absolute;
+    box-sizing: border-box; /* Uwzględnia padding i border w szerokości listy */
+    width: 74%;  /* Lista ma szerokość równą szerokości inputa */
+    max-height: 200px;  /* Określamy maksymalną wysokość listy */
+    overflow-x: auto;  /* Dodajemy przewijanie, jeśli lista jest zbyt długa */
+    overflow-y: auto;  /* Dodajemy przewijanie, jeśli lista jest zbyt długa */
+    background-color: white;
+    outline: 0.005px solid #d4d4d4;
+    font-size: 1.3em;
+    margin-top: 4px;
+    padding: 0;
+    list-style: none;
+}
+
+/* Elementy listy */
+.form-section-input--autocomplete__list li {
+    padding-left: 15px;
+    border: 0.005px solid #d4d4d4;
+    cursor: pointer;
+    display: flex;
+}
+
+
+
+
 .modal-content__form-section-select{
     width: 100%;
     box-sizing: border-box;
@@ -380,4 +414,3 @@ padding-left: 30px;
 body.modal-open {
     overflow: hidden;
 }
-
