--- a/data/css/main.css
+++ b/data/css/main.css
@@ -286,18 +286,21 @@ padding-left: 30px;
     position: relative;
     justify-content: center;
     align-items: center;
-
-
     height: auto;
     padding: 20px;
 }
+/* Modal Content */
+.modal-content--invoice {
+    width: 75%;
+}
 
-.add-cateogry, .edit-category, .add-client, edit-client, .add-product, .edit-product{
+.add-cateogry, .edit-category, .add-client, edit-client, .add-product, .edit-product, .add-invoice{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 
 .modal-content__info{
     display: none;
@@ -318,9 +321,46 @@ padding-left: 30px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 80%;
+    width: 100%;
+}
+.modal-content__form-section-main{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-direction: row;
+    width: 100%;
+
 }
 
+.modal-content__form-section-client,
+.modal-content__form-section-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 45%; /* Każda sekcja zajmuje 45% szerokości */
+    text-align: left;
+}
+
+.modal-content__form-section-client p,
+.modal-content__form-section-right p{
+    margin: 4px 2px;
+    font-weight: bold;
+}
+
+.form-section-client__list{
+    /*text-align: right;*/
+    list-style: none;
+    /*border: 0.005px solid #d4d4d4;*/
+    width: 100%;
+    padding-left: 10px;
+    margin: 0;
+
+}
+.form-section-client__list li{
+    border-bottom: 0.005px solid #d4d4d4;
+
+}
 .modal-content__close-button {
     position: absolute;
     top: 10px;
@@ -397,6 +437,17 @@ padding-left: 30px;
     border-radius: 5px;
     margin-top: 4px;
     margin-bottom: 20px;
+
+}
+
+.modal-content__form-section-button--option{
+    height: 35px;
+    width: 45%;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    align-self: flex-start;
+    font-size: 0.85em;
+    background-color: #007bff;
 
 }
 
