--- a/data/css/main.css
+++ b/data/css/main.css
@@ -248,7 +248,9 @@ padding-left: 30px;
     }
 
     .modal-content{
+
         width: 75%;
+        overflow: hidden; /*TODO TO NIE MUSI BYC NAJLEPSZE*/
     }
 
 
@@ -268,6 +270,7 @@ padding-left: 30px;
     z-index: 1; /* Przykrywa inne elementy */
     justify-content: center;
     align-items: center;
+    /*TODO DEBUG CZEMU SIE CHOWA HEADER ADD INVOICE*/
 }
 
 .modal-visible {
@@ -288,7 +291,12 @@ padding-left: 30px;
     align-items: center;
     height: auto;
     padding: 20px;
+    max-height: 100%;
+    overflow-y: auto;
+    box-sizing: border-box;
 }
+
+
 /* Modal Content */
 .modal-content--invoice {
     width: 75%;
@@ -325,9 +333,9 @@ padding-left: 30px;
 }
 .modal-content__form-section-main{
     display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
 
 }
@@ -338,7 +346,7 @@ padding-left: 30px;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    width: 45%; /* Każda sekcja zajmuje 45% szerokości */
+    width: 95%; /* Każda sekcja zajmuje 45% szerokości */
     text-align: left;
 }
 
@@ -442,13 +450,42 @@ padding-left: 30px;
 
 .modal-content__form-section-button--option{
     height: 35px;
-    width: 45%;
+    width: 150px;
+    max-width: 45%;
     margin-top: 0px;
-    margin-bottom: 0px;
-    align-self: flex-start;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    align-self: flex-end;
     font-size: 0.85em;
     background-color: #007bff;
 
+}
+
+.main-content__table--modal{
+    padding: 10px 0;
+    /*margin: 10px 0;*/
+    border-radius: 10px; /* Dodanie zaokrąglonych narożników */
+    overflow: hidden;
+    box-sizing: border-box;
+    width: 100%;
+
+
+}
+
+
+
+.main-content__table-container--modal {
+    border: none !important; /* Usuwa obramowanie */
+    box-shadow: none !important;
+    margin: 0 !important;
+    background-color: transparent !important;
+    max-height: 300px !important;
+}
+
+
+
+.main-content__table-header-cell--modal{
+    background-color: rgb(128, 117, 117);
 }
 
 .modal-content__form-section-delete-button{
